--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container" style="margin-top: 100px;">
+  <button class="btn btn-primary" (click)="createNewHero()">Create New Hero</button>
+
   <h1>{{ title }}</h1>
   
   <div class="table-responsive">
@@ -9,6 +11,7 @@
           <th scope="col">First Name</th>
           <th scope="col">Last Name</th>
           <th scope="col">Place</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -17,9 +20,11 @@
           <td>{{ hero.firstName }}</td>
           <td>{{ hero.lastName }}</td>
           <td>{{ hero.place }}</td>
+          <td><button class="btn btn-warning" (click)="editHero(hero)">Edit</button></td>
         </tr>
       </tbody>
     </table>
   </div>
 
+  <app-edit-hero [hero]="heroToEdit"></app-edit-hero>
 </div>
